--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,13 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+
+spring.mail.host=smpt.gmail.com
+spring.mail.port=587
+spring.mail.username=korneliaspring02@gmail.com
+spring.mail.password=fEfzow-goszy0-myfpak
+spring.mail.properties.mail.smpt.auth=true
+spring.mail.properties.mail.smpt.starttls.enable=true
+
