--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,16 @@
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
+
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 
-spring.mail.host=smpt.gmail.com
-spring.mail.port=587
+spring.mail.host=smtp.gmail.com
 spring.mail.username=korneliaspring02@gmail.com
 spring.mail.password=fEfzow-goszy0-myfpak
-spring.mail.properties.mail.smpt.auth=true
-spring.mail.properties.mail.smpt.starttls.enable=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
